# second-brain-template

./: .gitignore  AI-SETUP.md  CLAUDE.md  LICENSE  README.md  config.yaml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  tags.yaml
.claude/: settings.json
.claude/skills/context/: SKILL.md
.claude/skills/debrief/: SKILL.md
.claude/skills/frontier/: SKILL.md
.claude/skills/ingest/: SKILL.md
.claude/skills/interview-pack/: SKILL.md
.claude/skills/log/: SKILL.md
.claude/skills/mnemonic/: SKILL.md
.claude/skills/path/: SKILL.md
.claude/skills/query/: SKILL.md
.claude/skills/quiz/: SKILL.md
.claude/skills/review/: SKILL.md
.claude/skills/start/: SKILL.md
.claude/skills/tag/: SKILL.md
.githooks/: pre-commit
.github/workflows/: ci.yml
assets/icon/: AppIcon.icns  README.md  gen.py
brain/: assess.py  backup.py  cli.py  cockpit.py  config.py  demo.py  doctor.py  embeddings.py  events.py  first_touch.py  frontier.py  gaps.py  graph.py  home.py  importer.py  inbox.py  ingest.py  pdfextract.py  retrieve.py  schema.py  store.py  util.py  weights.py
brain/model/: __init__.py  compile.py  context.py  imports.py  outline.py  readiness.py  registry.py  tracks.py
docs/: architecture.md  cli.md  demo-guide.md  glossary.md  skills.md  testing.md  ux.md
examples/starter/: 2026-07-05-demo-big-o-basics.md  2026-07-05-demo-bst.md  2026-07-05-demo-dynamic-programming.md  2026-07-05-demo-elevator-pitch.md  2026-07-05-demo-graphs.md  2026-07-05-demo-hash-tables.md  2026-07-05-demo-protein-basics.md  2026-07-05-demo-sorting.md  README.md
goals/: goals.yaml
goals/roadmaps/: dsa-interviews.yaml  example-cert.yaml  gcp-ace.yaml  gcp-cdl.yaml
knowledge/career/: 2026-01-01-sample-career-note.md
knowledge/cs/: 2026-01-01-sample-study-note.md
mnemonics/: scenes.yaml  vocabulary.yaml
model/: concepts.yaml
rubrics/: depth.yaml
scripts/: check_sanitization.py
tests/: conftest.py  test_assess.py  test_backup.py  test_check_sanitization.py  test_chunking.py  test_cockpit.py  test_demo.py  test_doctor.py  test_e2e_cli.py  test_events.py  test_first_touch.py  test_frontier.py  test_gaps.py  test_graph.py  test_graph_practice.py  test_graph_tags.py  test_graph_tracks.py  test_home.py  test_inbox.py  test_mnemonics.py  test_model_compile.py  test_model_context.py  test_model_outline.py  test_model_readiness.py  test_model_registry.py  test_model_tracks.py  test_pdfextract.py  test_schema.py  test_weights.py
tests/fixtures/: syllabus.md
tests/fixtures/goals/: goals.yaml
tests/fixtures/goals/roadmaps/: dsa-interviews.yaml  gcp-ace.yaml  gcp-cdl.yaml
tests/fixtures/knowledge/career/: 2026-07-02-behavioral-star-method.md
tests/fixtures/knowledge/cloud/: 2026-07-02-gcp-iam-basics.md
tests/fixtures/knowledge/cs/: 2026-07-02-btree-vs-hash-indexes.md
tests/fixtures/knowledge/projects/: 2026-07-02-ebapp-auth-session-tokens.md  2026-07-02-sideproject-auth-session-tokens.md
tests/fixtures/model/: concepts.yaml
tests/fixtures/rubrics/: depth.yaml
ui/: dashboard.html  index.html
